--- a/NotificationSystem/appsettings.json
+++ b/NotificationSystem/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-    //"DefaultConnection": "Server=localhost;Database=aspnet-NotificationSystem-b47a67d8-3dc4-4c42-b373-64727cd3be89;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"  ,
-      "DefaultConnection": "Server=localhost;Database=aspnet-NotificationSystem;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
+    "NotificationSystemUserConn": "Server=localhost;Database=aspnet-NotificationSystem;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True",
+    "CanteenConnection": "Server=localhost;Database=OfficeCanteenDB;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
   },
   "Logging": {
     "LogLevel": {
